[package]
name = "gbrt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dyn-clone = "1.0.10"
glam = { version = "0.22.0", features = ["fast-math"] } # Remember to compile with "cargo run --release --target x86_64-unknown-linux-gnu" or "x86_64-pc-windows-msvc" to get the best performance
image = "0.24.5"
rand = "0.8.5"
rayon = "1.6.1"

[dev-dependencies]
criterion = "0.3.5"
