[package]
name = "gbrt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bvh = "0.7.1"
dyn-clone = "1.0.10"
fastrand = "1.9.0"
glam = { version = "0.22.0", features = ["fast-math"] }
# Compile with "cargo run --release --target x86_64-unknown-linux-gnu" or "x86_64-pc-windows-msvc" to gain ~7% performance
image = "0.24.5"
lazy_static = "1.4.0"
likely_stable = "0.1.2"
obj-rs = "0.7.0"
rand = "0.8.5"
rayon = "1.6.1"
stl_io = "0.7.0"
yaml-rust = "0.4.5"

[dev-dependencies]
criterion = "0.3.5"
